# Game-of-life-CUDA

./: .gitignore  README.md
src/: CMakeLists.txt
src/CudaLife/include/: Benchmark.h  CpuLife.h  GpuLife.h  stdafx.h
src/CudaLife/src/: CudaLife.cu
src/CudaLifeGui/src/: main.cpp
src/CudaLifeTests/src/: BenchmarkTests.cpp  CpuLifeTests.cpp  GpuLifeTests.cpp  main.cpp
